# My-Own-App-Engine

./: .gitlab-ci.yml
backend/: .gitignore  pyproject.toml
backend/src/core/: models.py
backend/src/core/services/: app.py
backend/tests/: test_create_app.py
billing/: Dockerfile  README.md  config.py  dependencies.py  docker-compose.yml  overdue_invoice_worker.py  pyproject.toml  renew_worker.py  requirements.txt  start_api.py
billing/api/: app.py  dependencies.py
billing/api/routes/: account.py  invoices.py  price.py  product.py  subscription.py  topup.py  transaction.py  usage.py
billing/core/errors/: base.py  prices.py  subscriptions.py
billing/core/interfaces/: repositories.py  unit_of_work.py
billing/core/models/: __init__.py  accounts.py  invoice.py  prices.py  products.py  subscriptions.py
billing/core/usecases/account/: __init__.py  create_account.py  get_transaction.py  topup.py
billing/core/usecases/invoice/: get_invoice.py
billing/core/usecases/price/: create_price.py
billing/core/usecases/product/: create_product.py
billing/core/usecases/subscription/: create_subscription.py  delete_subscription.py
billing/core/usecases/usage/: report_usage.py
billing/infrastructure/postgres/: connection.py  mapping.py
billing/infrastructure/postgres/migration/: alembic.ini
billing/infrastructure/postgres/tables/: __init__.py  account_balances.py  accounts.py  base.py  invoice_lines.py  invoices.py  prices.py  products.py  subscription_items.py  subscriptions.py
billing/infrastructure/repositories_adapters/: repository.py  sqlalchemy_account_balance_repo.py  sqlalchemy_account_repo.py  sqlalchemy_invoice_repo.py  sqlalchemy_price_repo.py  sqlalchemy_product_repo.py  sqlalchemy_subscription_item_repo.py  sqlalchemy_subscription_repo.py  sqlalchemy_transaction_repo.py
billing/infrastructure/services/: unit_of_work.py
billing/tests/: conftest.py
billing/tests/fakes/: account_balance_repository.py  account_repository.py  price_repository.py  product_repository.py  unit_of_work.py
billing/tests/unit_tests/: test_create_account.py  test_create_price.py  test_create_product.py
billing/utils/: datetime.py  paging.py
billing/workers/: overdue_invoice.py  renew.py  tasks.py
dashboard/: .env.template  README.md  api.py  config.py  pyproject.toml  seeding.py
dashboard/src/: dependencies.py  seed.py  utils.py
dashboard/src/api/: app.py  auth.py  auth0.py  dependencies.py
dashboard/src/api/routes/: app.py  deployments.py  project.py  units.py  user.py
dashboard/src/core/: errors.py
dashboard/src/core/entities/: __init__.py  activity.py  app.py  deployments.py  environments.py  (+4 more)
dashboard/src/handlers/: app.py
dashboard/src/repositories/: activity.py  app.py  base.py  billing_resource.py  deployment.py  environment.py  plan.py  project.py  project_member.py  scale.py  unit.py  user.py
dashboard/src/services/: billing.py  build_client.py  provisioner.py  task_manager.py  unit_of_work.py
dashboard/src/utils/: datetime.py  retry.py
dashboard/tests/: conftest.py  test_create_app.py
dashboard/tests/fake/: factory.py  fake_app_repository.py  fake_provisioner.py  fake_unit_of_work.py
dashboard/tests/test_cases/: test_create_app.py
(+97 files in other folders)
