[tool.poetry]
name = "billing"
version = "0.1.0"
description = ""
authors = ["vuonglv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.2.0"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
environs = "^9.5.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
flake8 = "^6.0.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
