[tool.poetry]
name = "billing"
version = "0.1.0"
description = ""
authors = ["vuonglv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.2.0"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
environs = "^9.5.0"
asyncpg = "^0.27.0"
pytz = "^2022.7.1"
sqlalchemy = {version = "^1.4", extras = ["asyncio"]}
pydantic = {extras = ["email"], version = "^1.10.4"}
celery = "^5.2.7"
redis = "^4.4.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
flake8 = "^6.0.0"
isort = "^5.11.4"
ipython = "^8.9.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"


[tool.poetry.group.migration.dependencies]
psycopg2 = "^2.9.5"
alembic = "^1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
