[tool.poetry]
name = "appengine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^22.2.0"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
alembic = "^1.9.1"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.45"}
environs = "^9.5.0"
psycopg2 = "^2.9.5"
pytz = "^2022.7"
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120


